--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index",
-    "start": "node ."
+    "start": "node .",
+    "checkUploads": "node scripts/checkUploadFolder"
   },
   "keywords": [],
   "author": "",
